re PR rtl-optimization/19579 (-march=i686 generates a bogus program for x86*)

PR rtl-optimization/19579
	* ifcvt.c (noce_try_cmove_arith): If emitting instructions to set up
	both A and B, see if they don't clobber registers the other expr uses.

	* gcc.c-torture/execute/20050124-1.c: New test.

From-SVN: r94835